[gd_scene format=3 uid="uid://jlr8kvdwhta5"]

[ext_resource type="Script" uid="uid://b5ejxxw7w7r46" path="res://ec_assets/objects/black_hole.gd" id="1"]
[ext_resource type="Material" uid="uid://d0gel3gux24hq" path="res://ec_assets/additive.tres" id="2"]
[ext_resource type="AudioStream" uid="uid://pvp1bg7txdwv" path="res://ec_assets/sounds/burning1.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://bxmbstp5pyy52" path="res://ec_assets/sounds/nova.mp3" id="4"]

[sub_resource type="Gradient" id="Gradient_jmiiu"]
offsets = PackedFloat32Array(0.5, 0.55, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.501961, 1, 0.25098, 1, 0.501961, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hvhfo"]
gradient = SubResource("Gradient_jmiiu")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_uti7e"]
offsets = PackedFloat32Array(0.8, 0.9, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_poltq"]
gradient = SubResource("Gradient_uti7e")

[sub_resource type="Curve" id="Curve_kcpve"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_cgryy"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_wwu52"]
radius = 25.0

[sub_resource type="Gradient" id="Gradient_1sq6f"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8wm7b"]
gradient = SubResource("Gradient_1sq6f")
width = 50
height = 25
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="black_hole" type="Area2D" unique_id=2077113180]
z_index = -1
script = ExtResource("1")

[node name="horizon" type="Sprite2D" parent="." unique_id=1826483121]
texture_filter = 2
texture = SubResource("GradientTexture2D_hvhfo")

[node name="particles" type="CPUParticles2D" parent="." unique_id=1646109521]
material = ExtResource("2")
amount = 100
texture = SubResource("GradientTexture1D_poltq")
lifetime = 0.5
local_coords = true
gravity = Vector2(0, 0)
angle_max = 720.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_kcpve")
color_ramp = SubResource("Gradient_cgryy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=191566735]
shape = SubResource("CircleShape2D_wwu52")

[node name="info" type="Node2D" parent="." unique_id=1020688462]
visible = false

[node name="bg" type="Sprite2D" parent="info" unique_id=1131833826]
texture_filter = 2
position = Vector2(0, -52)
scale = Vector2(3, 3)
texture = SubResource("GradientTexture2D_8wm7b")

[node name="name" type="Label" parent="info" unique_id=828701935]
texture_filter = 2
offset_left = -64.0
offset_top = -96.0
offset_right = 192.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 32
text = "Black Hole"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="type" type="Label" parent="info" unique_id=99908466]
texture_filter = 2
offset_left = -64.0
offset_top = -64.0
offset_right = 192.0
offset_bottom = -16.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 16
text = "singularity"
horizontal_alignment = 1
vertical_alignment = 2

[node name="hum" type="AudioStreamPlayer2D" parent="." unique_id=1657002175]
stream = ExtResource("3")
pitch_scale = 0.15
autoplay = true

[node name="appear" type="AudioStreamPlayer2D" parent="." unique_id=1744318030]
stream = ExtResource("4")
volume_db = 5.0
pitch_scale = 0.75
autoplay = true
max_distance = 5000.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
